k8/game-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
  labels:
    app: game-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
        - name: game-service
          image: mahishi707/game-service:latest   # your Docker Hub image
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /docs
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 8001
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector:
    app: game-service
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
  type: ClusterIP
